Fix wording and spacing of subtitles

--- a/assets/css/era2021.scss
+++ b/assets/css/era2021.scss
@@ -1,6 +1,6 @@
 .v-application.style-2021 {
   .maintitle h2 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 800;
     margin-bottom: 0.5em;
   }
